Closed Bug 240300 Opened 22 years ago Closed 21 years ago

IDN: Domain in "Connection refused" dialog poorly encoded

Categories

(Core :: Internationalization, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: crispin, Assigned: jshin1987)

Details

(Keywords: intl)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7b) Gecko/20040329 Galeon/1.3.14 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7b) Gecko/20040329 Galeon/1.3.14 Forwarded from http://bugzilla.gnome.org/show_bug.cgi?id=139341 If an IDN website isn't running, then the "Connection refused" dialog encodes the URL incorrectly, and instead of getting the correct UTF-8 chars, you get garbage. Reproducible: Always Steps to Reproduce: 1. Go to an IDN site that is in DNS, but isn't running (the reporter of the original galeon bug gave http://刘莉.dyndns.info/ as an example (but it may be running sometimes)) 2. wait for the "Connection refused" dialog Actual Results: The dialog box has a very badly encoded dialog box. Expected Results: The dialog box should have the correctly displayed URL
Re comment #0: Please, make sure to set View | Character Encoding to UTF-8 before typing non-ASCII strings in bugzilla.
http://刘莉.dyndns.info/ (With UTF-8 Encoding)
Confirming and taking. UTF-8 strings are zero-padded when converting to UTF-16.
Assignee: smontagu → jshin
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: intl
re comment #4: that is, 'string' is used where 'AUTF8String' should be used or something like that.
Status: NEW → ASSIGNED
OS: Linux → All
Hardware: PC → All
the symptom of comment 4 sounds more like AssignWithConversion is used where CopyUTF8toUTF16 should be used. |string| instead of |AUTF8String| would cause stripping of the high byte.
You're absolutely right. The screenshot confirmed that.
Attached patch patchSplinter Review
It seems like nhotta missed two places while making his patch for bug 122705.
Comment on attachment 150439 [details] [diff] [review] patch asking for r/sr
Attachment #150439 - Flags: superreview?(darin)
Attachment #150439 - Flags: review?(cbiesinger)
Attachment #150439 - Flags: review?(cbiesinger) → review+
Attachment #150439 - Flags: superreview?(darin) → superreview+
fixed on the trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: