bug 240300 : IDN in 'Connection refused alert' garbled. (r=cbie, sr=darin)